# IT8297-RGBFusion-macOS

./: .gitignore  CMakeLists.txt  main.cpp
src/: Controller.cpp  Controller.h  Effect.cpp  Effect.h
